syntax = "proto3";

package librarian.sephirah.v1.sentinel;

option csharp_namespace = "TuiHub.Protos.Librarian.Sephirah.V1.Sentinel";
option go_package = "github.com/tuihub/protos/pkg/librarian/sephirah/v1/sentinel;v1";

service LibrarianSentinelService {
  // `Tiphereth` Use valid refresh_token and get two new token, a refresh_token can only be used once
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  // `Gebura` `Sentinel`
  rpc ReportSentinelInformation(ReportSentinelInformationRequest) returns (ReportSentinelInformationResponse);
  // `Gebura` `Sentinel`
  // Full update, changes are handled by librarian
  rpc ReportAppBinaries(ReportAppBinariesRequest) returns (ReportAppBinariesResponse);
}

message RefreshTokenRequest {}
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message ReportSentinelInformationRequest {
  string url = 1;
  repeated string url_alternatives = 2;
  // valid when need_token is true
  string get_token_path = 3;
  string download_file_base_path = 4;
  repeated SentinelLibrary libraries = 5;
}
message ReportSentinelInformationResponse {}

message ReportAppBinariesRequest {
  repeated SentinelLibraryAppBinary app_binaries = 1;
}
message ReportAppBinariesResponse {}

message SentinelLibrary {
  int64 id = 1;
  string download_base_path = 2;
}

message SentinelLibraryAppBinary {
  int64 sentinel_library_id = 1;
  string sentinel_generated_id = 2;
  int64 size_bytes = 3;
  bool need_token = 4;
  repeated SentinelLibraryAppBinaryFile files = 5;

  string name = 10;
  string version = 11;
  string developer = 12;
  string publisher = 13;
}

message SentinelLibraryAppBinaryFile {
  string name = 1;
  int64 size_bytes = 2;
  bytes sha256 = 3;
  // should be path-joined to download_path when need_token is false
  string server_file_path = 4;

  optional string chunks_info = 10;
}
